# drone_with_mavros

./: README.md
src/board_detect/: CMakeLists.txt  package.xml
src/board_detect/launch/: board_detect.launch
src/board_detect/src/: board_node.cpp
src/drone_control/: CMakeLists.txt  Doxyfile  README.md  package.xml
src/drone_control/docs/html/: ArucoTagProcessor_8cpp.html  ArucoTagProcessor_8cpp__incl.map  ArucoTagProcessor_8cpp__incl.md5  ArucoTagProcessor_8h.html  ArucoTagProcessor_8h__dep__incl.map  ArucoTagProcessor_8h__dep__incl.md5  ArucoTagProcessor_8h__incl.map  ArucoTagProcessor_8h__incl.md5  ArucoTagProcessor_8h_source.html  ArucoTag_8h.html  ArucoTag_8h__dep__incl.map  ArucoTag_8h__dep__incl.md5  ArucoTag_8h__incl.map  ArucoTag_8h__incl.md5  ArucoTag_8h_source.html  CMakeLists_8txt.html  ConfirmLicenseController_8cpp.html  ConfirmLicenseController_8cpp__incl.map  ConfirmLicenseController_8cpp__incl.md5  ConfirmLicenseController_8h.html  ConfirmLicenseController_8h__dep__incl.map  ConfirmLicenseController_8h__dep__incl.md5  ConfirmLicenseController_8h__incl.map  ConfirmLicenseController_8h__incl.md5  ConfirmLicenseController_8h_source.html  ConfirmLicenseMission_8cpp.html  ConfirmLicenseMission_8cpp__incl.map  ConfirmLicenseMission_8cpp__incl.md5  ConfirmLicenseMission_8h.html  ConfirmLicenseMission_8h__dep__incl.map  ConfirmLicenseMission_8h__dep__incl.md5  ConfirmLicenseMission_8h__incl.map  ConfirmLicenseMission_8h__incl.md5  ConfirmLicenseMission_8h_source.html  ConfirmLicenseNodes_8cpp.html  ConfirmLicenseNodes_8cpp__incl.map  ConfirmLicenseNodes_8cpp__incl.md5  ConfirmLicenseNodes_8h.html  ConfirmLicenseNodes_8h__dep__incl.map  ConfirmLicenseNodes_8h__dep__incl.md5  (+722 more)
src/drone_control/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+33 more)
src/drone_control/docs/latex/: ArucoTagProcessor_8cpp.tex  ArucoTagProcessor_8cpp__incl.md5  ArucoTagProcessor_8h.tex  ArucoTagProcessor_8h__dep__incl.md5  ArucoTagProcessor_8h__incl.md5  ArucoTag_8h.tex  ArucoTag_8h__dep__incl.md5  ArucoTag_8h__incl.md5  CMakeLists_8txt.tex  ConfirmLicenseController_8cpp.tex  ConfirmLicenseController_8cpp__incl.md5  ConfirmLicenseController_8h.tex  ConfirmLicenseController_8h__dep__incl.md5  ConfirmLicenseController_8h__incl.md5  ConfirmLicenseMission_8cpp.tex  ConfirmLicenseMission_8cpp__incl.md5  ConfirmLicenseMission_8h.tex  ConfirmLicenseMission_8h__dep__incl.md5  ConfirmLicenseMission_8h__incl.md5  ConfirmLicenseNodes_8cpp.tex  ConfirmLicenseNodes_8cpp__incl.md5  ConfirmLicenseNodes_8h.tex  ConfirmLicenseNodes_8h__dep__incl.md5  ConfirmLicenseNodes_8h__incl.md5  Controller_8h.tex  Controller_8h__dep__incl.md5  Controller_8h__incl.md5  DroneControl_8cpp.tex  DroneControl_8cpp__incl.md5  DroneControl_8h.tex  DroneControl_8h__dep__incl.md5  DroneControl_8h__incl.md5  GPSNavMission_8cpp.tex  GPSNavMission_8cpp__incl.md5  GPSNavMission_8h.tex  GPSNavMission_8h__dep__incl.md5  GPSNavMission_8h__incl.md5  IdleMission_8cpp.tex  IdleMission_8cpp__incl.md5  IdleMission_8h.tex  (+328 more)
src/drone_control/include/MissionNode/: ConfirmLicenseMission.h  GPSNavMission.h  IdleMission.h  MissionNode.h  PrecisionLandMission.h  SafeDepartureMission.h
src/drone_control/include/StateNode/: ConfirmLicenseNodes.h  PrecisionLandNodes.h  SafeDepartureNodes.h  StateNode.h
src/drone_control/include/Tag/: ArucoTag.h  ArucoTagProcessor.h  License.h  LicenseProcessor.h
src/drone_control/include/core/: DroneControl.h  MavrosBridge.h  NodeBase.h  NodeMachine.h  StatusMonitor.h
src/drone_control/include/util/: LicenseDatabase.h  utils.h
src/drone_control/launch/: gazebo.launch  real.launch
src/drone_control/src/: main.cpp
src/drone_control/src/MissionNode/: ConfirmLicenseMission.cpp  GPSNavMission.cpp  IdleMission.cpp  PrecisionLandMission.cpp  SafeDepartureMission.cpp
src/drone_control/src/StateNode/: ConfirmLicenseNodes.cpp  PrecisionLandNodes.cpp  SafeDepartureNodes.cpp
src/drone_control/src/Tag/: ArucoTagProcessor.cpp  LicenseProcessor.cpp
src/drone_control/src/core/: DroneControl.cpp  MavrosBridge.cpp  StatusMonitor.cpp
src/drone_control/src/util/: LicenseDatabase.cpp
src/license_detection/: CMakeLists.txt  package.xml
src/license_detection/launch/: license_detection.launch
src/license_detection/src/: license_detection_node.py
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/msg/: LicenseInfo.msg
src/my_interfaces/srv/: Nav.srv
